feat: address search using google places api

--- a/angular.json
+++ b/angular.json
@@ -12,8 +12,9 @@
       "schematics": {},
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "indexTransform": "./index-replace-api-key.ts",
             "outputPath": "www",
             "index": "src/index.html",
             "main": "src/main.ts",
