--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@angular/service-worker": "~12.0.1",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@ionic/angular": "^5.5.2",
     "leaflet": "^1.7.1",
